--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     <form action="#" id="add-form" class="form-inline">
       <div class="form-group">
         <label for="add"></label>
-        <input type="text" class="form-control" placeholder="Enter an integer..." id="input-add"/>
+        <input type="text" class="form-control" placeholder="Nhập một số..." id="input-add"/>
       </div>
-      <button type="submit" class="btn btn-primary">Add</button>
-      <a href="#" id="clear-button" class="btn btn-default reset-btree">Reset</a>
+      <button type="submit" class="btn btn-primary">Thêm</button>
+      <a href="#" id="clear-button" class="btn btn-default reset-btree">Làm mới</a>
     </form>
 
   </div>
